[gd_scene load_steps=6 format=2]

[ext_resource path="res://Register/Register_validator.gd" type="Script" id=1]
[ext_resource path="res://fonts/Legacy-6YgdM.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="Register" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.37842
margin_right = 2.37842
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 514.0
margin_top = 121.0
margin_right = 766.0
margin_bottom = 599.0
custom_constants/separation = 9
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 252.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0.764706, 0.282353, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "REGISTER      "
align = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 252.0
margin_bottom = 99.0
rect_min_size = Vector2( 0, 50 )

[node name="Email" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 252.0
margin_bottom = 122.0
text = "Email"

[node name="EmailEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 252.0
margin_bottom = 155.0

[node name="Password" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 252.0
margin_bottom = 178.0
text = "Password"

[node name="PasswordEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 187.0
margin_right = 252.0
margin_bottom = 211.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 252.0
margin_bottom = 234.0
text = "Pseudo"

[node name="PseudoEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 252.0
margin_bottom = 267.0

[node name="Notification" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 252.0
margin_bottom = 290.0

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 299.0
margin_right = 252.0
margin_bottom = 349.0
rect_min_size = Vector2( 0, 50 )

[node name="Register" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 358.0
margin_right = 252.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 2 )
text = "Register"

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 413.0
margin_right = 252.0
margin_bottom = 423.0
rect_min_size = Vector2( 0, 10 )

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 432.0
margin_right = 252.0
margin_bottom = 478.0
custom_fonts/font = SubResource( 3 )
text = "BACK"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
